--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       rel="stylesheet"
     />
     <!--vinculacion a style y normalize-->
-    <link rel="stylesheet" href="/tnw-proyect2.0/css/style.css" />
-    <link rel="stylesheet" href="/tnw-proyect2.0/css/normalize.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/normalize.css" />
   </head>
   <body>
     <header class="header">
